# RCM_Measurements

./: .gitignore  Doxyfile  Doxyfile.in  README.md  config.xml  start.m
Code/: CalNA_np_GPIB.m  CalNA_np_GPIB_2port.m  DemoFig.fig  PNA_single_2port_R.m  PNA_single_test.m  Sf2Zf.m  genPMFrcm.m  getSparametersFrequencyDomain.m  getSparametersTimeDomain.m  initializePNA.m  normalizeZ1.m  validate2Port.m  validate2Port_R.m  validateV2.m
Code/analysis_functions/: T_method_generator_JenHao.m  analyzeResults.m  compareCorrectedSParameters.m  compareTimeDomain.m  computeEnhancedBackscatter.m  computePowerDecayProfile.m  computePowerDecayProfile2.m  computeSrad.m  genPMFrcm.m  getSParameterCorrectionFactor.m  getSParameterPower2.m  getStirredSParameterPower.m  getStirredSParameters.m  getTau.m  getTimeDomainSignal.m  loadData.m  normalizeZ.m  plotSParameters2.m  rcmComparisonSinglePort.m  transformStoZ2.m
Code/gui_functions/: guiTimerCallback.m  gui_UpdateMode.m  gui_connectToPNA.m  gui_createControlSection.m  gui_createPlotSection.m  gui_createStatusSection.m  gui_loadConfig.m  gui_mainWindow.m  logError.m  logSettings.m  seekerFigure.m  updateSParametersPlots.m  updateZPlots.m
Code/pna_functions/: calibratePNA.m  captureSParameters.m  connectToPNA.m  connectToStepperMotor.m  getSCavFrequencyDomain.m  getSCavTimeDomain.m  getSradFrequencyDomain.m  getStepperMotorPosition.m  measureData.m  packComponents.m  saveData.m  takeMeasurement.asv  takeMeasurement.m
Code_BF/: PNA_single_2port_R.m
Matlab/analysis_functions/: analyzeResults.m  applyTimeGating.m  checkTimeGateSettings.m  compareCorrectedSParameters.m  compareGatingPosition.m  computePowerDecayProfile.m  computeRCMDistribution.m  computeRadiationEfficiency.m  computeSrad.m  computeTauRC.m  getCorrectedSParameterPower.m  getKFactor.m  getSParameterCorrectionFactor.m  getTimeDomainSParameters.m  ifftRCM.m  ifftS.m  loadData.m  loadSettingsFromHDF5File.m  normalizeImpedance.m  normalizeSinglePortImpedance.m  plotSParameters.m  plotScavEnsembles.m  plotSrad.m  rcmComparisonSinglePort.m  transformStoZ.m
Matlab/gui_functions/: gui_CreateStatusBar.m  gui_createControlSection.m  gui_createPlotSection.m  gui_createStatusSection.m  gui_updateStatusMessage.m  updateZPlots.m
Matlab/pna_functions/: getGatedSParametersFrequencyDomain.m  getSParameters.m  getSParametersTimeDomain.m  saveData.m  saveSettings.m
code/: RCMGUI_Issues.xlsx
code/RCM_utilities/: computeNormalizedZetaRealizationGOE.m
code/analysis_functions/: applyTimeGating.m  compareGatingPosition.m  computeDistributions.m  computeMeasuredDistribution.m  computeRCMDistribution.m  computeTau.m  computeTau0.m  computeTauRC.m  computeTauRMS.m  fftS.m  gatePositionDriver.m  getComplexFromHDF5.m  getTimeDomainSParameters.m  ifftS.m  loadAnalysisFile.m  loadSettingsFromHDF5File.m  normalize2Port.m  normalizeImpedance.m  plotKFactor.m  plotSParameters.m  plotSParametersRealImag.m  plotScavEnsembles.m  plotZrad.m  saveComplexToHDF5.m  testGatingPosition.m  testRCMNormalizationGating.m  (+6 more)
code/cpp/: CMakeLists.txt  Doxyfile.in  FindGRPC.cmake  README.md  config.xml
code/cpp/CMakeModules/: MacOsBundle.plist.in
code/cpp/src/: .cproject  CMakeLists.txt
code/cpp/src/GUI/: CMakeLists.txt  icons.qrc  logmessages.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurementThread.cpp  measurementThread.h
code/cpp/src/GUI/iconCreation/: createIconSet.sh
code/cpp/src/GUI/icons/: umdlogo.icns
code/cpp/src/data_logger/: CMakeLists.txt  DataLoggerExceptions.h  DataLoggerInterface.h  DataLogger_HDF5.cpp  DataLogger_HDF5.h  DataLogger_HDF5_Settings.cpp
code/cpp/src/data_logger/tests/: CMakeLists.txt  DataLogger_test.cpp
code/cpp/src/instrument_controller/: CMakeLists.txt  instrumentController.cpp  instrumentController.h  instrumentControllerBase.cpp  instrumentControllerBase.h  instrumentControllerInterface.cpp  instrumentControllerInterface.h  instrumentControllerMock.cpp  instrumentControllerMock.h  instrumentExceptions.h  instrumentWrapper.cpp  instrumentWrapper.h
code/cpp/src/instrument_controller/tests/: CMakeLists.txt  instrumentWrapper_test.cpp
code/cpp/src/instrument_controller/vxi11/: clnt_find_services.h  vxi11.h  vxi11_clnt.c  vxi11_wrapper.cc
code/cpp/src/instrument_controller/vxi11/test/: CMakeLists.txt
code/cpp/src/measurement_control/: CMakeLists.txt  measurementController.cpp  measurementController.h  measurementExceptions.h  measurementModes.h  measurementSettings.cpp  measurementSettings.h
code/cpp/src/measurement_control/tests/: CMakeLists.txt  measurementControl_test.cpp
code/cpp/src/pna_controller/: CMakeLists.txt  pnaController.cpp  pnaController.h  pnaControllerBase.cpp  pnaControllerBase.h  pnaControllerInterface.cpp  pnaControllerInterface.h  pnaControllerMock.cpp  pnaControllerMock.h  pnaExceptions.h  pnaWrapper.cpp  pnaWrapper.h
code/cpp/src/pna_controller/tests/: CMakeLists.txt  pnaWrapper_test.cpp
code/cpp/src/stepper_motor_controller/: CMakeLists.txt  stepperMotorController.cpp  stepperMotorController.h  stepperMotorControllerBase.cpp  stepperMotorControllerBase.h  stepperMotorControllerInterface.cpp  stepperMotorControllerInterface.h  stepperMotorControllerMock.cpp  stepperMotorControllerMock.h  stepperMotorExceptions.h  stepperMotorWrapper.cpp  stepperMotorWrapper.h
code/cpp/src/stepper_motor_controller/tests/: CMakeLists.txt  stepperMotorWrapper_test.cpp
code/cpp/src/utilities/: CMakeLists.txt  stringUtilities.cpp  stringUtilities.h  vectorSignalUtilities.cpp  vectorSignalUtilities.h
code/cpp/src/utilities/tests/: CMakeLists.txt  stringUtility_test.cpp
code/cpp/src/vxi11/: CMakeLists.txt  vxi11_svc.c  vxi11_wrapper.cc  vxi11_wrapper.h
code_old/: CalNA_np.m  PNA_single_2port.m  PNA_single_2port_R.m  PNA_single_v3.m  getalpha.m
cpp/: CMakeLists.txt
gui_functions/: cdl2SeekerData.m  guiTimerCallback.m  gui_CreateStatusBar.m  gui_UpdateMode.m  gui_createControlSection.m  gui_createPlotSection.m  gui_createStatusSection.m  gui_mainWindow.m  gui_updateStatusMessage.m  logMessage.m  seekerDataMovie.m  updateSeekerFigure.m
(+69 files in other folders)
